// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summaries Failure renders error 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="my-4 text-center"
  >
    <div
      className="my-3 text-danger"
    >
      ¡Ratas! Parece que no estás conectado a internet. Refresca la página o pulsa el siguiente botón.
    </div>
    <button
      className="btn btn-outline-primary btn-sm"
      onClick={[Function]}
    >
      Volver a intentar
    </button>
  </div>
</div>
`;

exports[`Summaries Failure renders error whan has items 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        id={1}
        key="1"
      />
      <Connect(Summary)
        id={2}
        key="2"
      />
      <Connect(Summary)
        id={3}
        key="3"
      />
    </ul>
  </div>
  <div
    className="my-4 text-center"
  >
    <div
      className="my-3 text-danger"
    >
      ¡Ratas! Parece que no estás conectado a internet. Refresca la página o pulsa el siguiente botón.
    </div>
    <button
      className="btn btn-outline-primary btn-sm"
      onClick={[Function]}
    >
      Volver a intentar
    </button>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 1 placeholder when has items and is fetching 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        id={1}
        key="1"
      />
      <Connect(Summary)
        id={2}
        key="2"
      />
      <Connect(Summary)
        id={3}
        key="3"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="0"
        size="settings/ITEM_MEDIUM"
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 3 placeholders when size is big 1`] = `
<div
  className="Summaries item-big"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        isPlaceholder={true}
        key="0"
        size="settings/ITEM_BIG"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="1"
        size="settings/ITEM_BIG"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="2"
        size="settings/ITEM_BIG"
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 9 placeholders when size is medium 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        isPlaceholder={true}
        key="0"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="1"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="2"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="3"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="4"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="5"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="6"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="7"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="8"
        size="settings/ITEM_MEDIUM"
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 9 placeholders when size is no given nor placeholder count 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        isPlaceholder={true}
        key="0"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="1"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="2"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="3"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="4"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="5"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="6"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="7"
        size="settings/ITEM_MEDIUM"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="8"
        size="settings/ITEM_MEDIUM"
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 19 placeholders when size is small 1`] = `
<div
  className="Summaries item-small"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        isPlaceholder={true}
        key="0"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="1"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="2"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="3"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="4"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="5"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="6"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="7"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="8"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="9"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="10"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="11"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="12"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="13"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="14"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="15"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="16"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="17"
        size="settings/ITEM_SMALL"
      />
      <Connect(Summary)
        isPlaceholder={true}
        key="18"
        size="settings/ITEM_SMALL"
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries renders default 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    />
  </div>
</div>
`;

exports[`Summaries renders summaries 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Connect(Summary)
        id={1}
        key="1"
      />
      <Connect(Summary)
        id={2}
        key="2"
      />
      <Connect(Summary)
        id={3}
        key="3"
      />
    </ul>
  </div>
</div>
`;
